create articles and lists

--- a/index.html
+++ b/index.html
@@ -21,10 +21,35 @@
         <li><a href="#pangolin">pangolin</a></li>
         <li><a href="#description">description</a></li>
         <li><a href="#behaviour"></a>behaviour</li>
-        <li><a href="#conversation">conversation</a></li>
+        <li><a href="#conservation">conversation</a></li>
       </ul>
     </nav>
   </header>
   <main role="main"
     <article id="description">
       <h2>Description</h2>
+      <p>Some countries where pangolins are found</p>
+      <ul>
+        <li>Botswana</li>
+        <li>Kenya</li>
+        <li>Mozambique</li>
+        <li>Namibia</li>
+        <li>South Africa</li>
+        <li>Tanzenia</li>
+        <li>Uganda</li>
+        <li>Zambia</li>
+        <li>Zimbabwe</li>
+      </ul>
+    </article>
+    <article id="behaviour">
+      <h2>Behaviour</h2>
+      <a href="https://en.wikipedia.org/wiki/Pangolin#Behaviour" aria-label="Read more about Pangolin behaviour">Read more</a>
+    </article>
+    <article id="conservation">
+      <h2>Conservation</h2>
+      <a href="https://en.wikipedia.org/wiki/Pangolin#Conservatiion" aria-label="Read more about Pangolin conservation">Read more</a>
+    </article>
+  </main>
+  <footer role="contentinfo">© 1821 Panolin</footer>
+</body>
+</html>
