--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr"
+<html lang="en" dir="ltr">
 <head>
   <meta charset="utf-8">
   <title>The Pangolin</title>
@@ -25,7 +25,7 @@
       </ul>
     </nav>
   </header>
-  <main role="main"
+  <main role="main">
     <article id="description">
       <h2>Description</h2>
       <p>Some countries where pangolins are found</p>
