fix broken "behaviour" link

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <ul>
         <li><a href="#pangolin">pangolin</a></li>
         <li><a href="#description">description</a></li>
-        <li><a href="#behaviour"></a>behaviour</li>
+        <li><a href="#behaviour">behaviour</a></li>
         <li><a href="#conservation">conversation</a></li>
       </ul>
     </nav>
